<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_login"
        android:title="login"
        android:visibility="visible"/>

    <item
        android:id="@+id/action_logout"
        android:title="logout"
        android:visibility="visible"/>


</menu>
